# rasyon_ogulcan

./: .gitignore  AGENTS.md  README.md  SPEC.md  __init__.py  app.py  main.py  pyproject.toml
controllers/: auth_controller.py  dashboard_controller.py
data/: yemler.csv
database/: rations.db
models/: database.py  feed_model.py  nutrition_models.py  optimization_model.py
utils/: auth.py  calculations.py  constants.py  database.py  logger.py  reporting.py  visualization.py
views/: dashboard_view.py  login_view.py  styles.py  widgets.py
