[project]
name = "zootekni-pro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fpdf>=1.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pyqt5>=5.15.11",
    "reportlab>=4.4.10",
    "scipy>=1.17.1",
]
